# ml-study

./: pyproject.toml
ch_01/: ch_01_06.ipynb
ch_02/: ch_02_01.ipynb  ch_02_03.ipynb  ch_02_05.ipynb
ch_03/: ch_03_01.ipynb  ch_03_03.ipynb  ch_03_05.ipynb
ch_04/: ch_04_01.ipynb  ch_04_03.ipynb  ch_04_05.ipynb
ch_05/: ch_05_01.ipynb  ch_05_03.ipynb  ch_05_05.ipynb
ch_06/: ch_06_01.ipynb  ch_06_03.ipynb  ch_06_05.ipynb
ch_07/: ch_07_01.ipynb  ch_07_03.ipynb  ch_07_05.ipynb
ch_09/: ch_09_01.ipynb  ch_09_03.ipynb  ch_09_05.ipynb
ch_10/: ch_10_01.ipynb  ch_10_03.ipynb  ch_10_05.ipynb
ch_11/: ch_11_01.ipynb  ch_11_03.ipynb  ch_11_05.ipynb
ch_11/titanic/: titanic_test.npy
ch_12/: ch_12_01.ipynb  ch_12_03.ipynb  ch_12_05.ipynb
ch_12/titanic/: titanic_X_train.npy
ch_13/: ch_13_01.ipynb  ch_13_03.ipynb  ch_13_05.ipynb
ch_14/: ch_14_01.ipynb  ch_14_01_03.ipynb  ch_14_01_03_05.ipynb  tmp_checkpoint.h5.keras
