[project]
name = "ml-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.11.2",
    "matplotlib>=3.10.3",
    "numpy<2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandas-datareader>=0.10.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "yfinance>=0.2.65",
]
